I've made a mistake with mobile design and desktop

--- a/css/à_la_française.css
+++ b/css/à_la_française.css
@@ -20,8 +20,7 @@ a:visited {
   color: #353535;
 }
 
-/* DESKTOP */
-@media screen and (min-width: 993px) {
+@media screen and (min-width: 320px) and (max-width: 992px) {
   /* HEADER */
   .back_to_homepage {
     display: -webkit-box;
@@ -131,14 +130,14 @@ a:visited {
     -webkit-background-clip: text;
     background-clip: text;
   }
-  .heart_animation:hover > .fa-heart {
+  .heart_animation:active > .fa-heart {
     background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
     background: linear-gradient(to top, #FF79DA, #9356DC);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
   }
-  .heart_animation:hover > .fa-heart::after {
+  .heart_animation:active > .fa-heart::after {
     visibility: visible;
     -webkit-transform: scale(2.4);
             transform: scale(2.4);
@@ -196,10 +195,10 @@ a:visited {
   .item {
     overflow: hidden;
   }
-  .item:hover > .check_validate {
+  .item:active > .check_validate {
     width: 6em;
   }
-  .item:hover > .check_validate > .fa-check-circle {
+  .item:active > .check_validate > .fa-check-circle {
     -webkit-animation: rotation 700ms ease-out;
             animation: rotation 700ms ease-out;
   }
@@ -207,7 +206,7 @@ a:visited {
     -webkit-transition: padding-right 700ms ease-out;
     transition: padding-right 700ms ease-out;
   }
-  .item:hover > .item__price {
+  .item:active > .item__price {
     padding-right: 6em;
   }
   /* END GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
@@ -322,472 +321,6 @@ a:visited {
     margin-bottom: 0.8em;
     position: relative;
     font-size: .8em;
-  }
-  .desserts .item .item--description h2 {
-    margin-bottom: .2em;
-    font-weight: 600;
-  }
-  .desserts .item .item__price {
-    position: absolute;
-    right: 2em;
-    top: 3em;
-    font-weight: bold;
-  }
-  .button {
-    padding: 0.9em 1.5em;
-    border-radius: 30px;
-    /* Temporary */
-    background-image: -webkit-gradient(linear, left top, right bottom, from(#FF79DA), to(#9356DC));
-    background-image: linear-gradient(to bottom right, #FF79DA, #9356DC);
-    margin-top: 10px;
-    position: relative;
-    text-align: center;
-    cursor: pointer;
-    -webkit-box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
-            box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
-    width: 10em;
-    margin: 0 auto;
-  }
-  .button a {
-    color: white;
-  }
-  .button:hover {
-    opacity: 0.9;
-    -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
-            box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
-  }
-  /* END OF MENU */
-  /* FOOTER */
-  footer {
-    background-color: #353535;
-    color: white;
-  }
-  .more_information {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    font-family: "Roboto", sans-serif;
-    gap: 10px;
-    margin-left: 4em;
-  }
-  .more_information h1 {
-    font-family: "Shrikhand", cursive;
-    margin-bottom: 0.5em;
-    position: relative;
-    right: 42px;
-    margin-top: 1em;
-    font-weight: 500;
-    font-size: 1.2em;
-    cursor: pointer;
-  }
-  .icon_description {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    gap: 10px;
-    font-size: 1em;
-    position: relative;
-    right: 2.5em;
-    cursor: pointer;
-  }
-  .icon_description .fas {
-    position: relative;
-    top: 2px;
-    font-size: 0.9em;
-  }
-  .icon_description #proposal {
-    color: white;
-  }
-  .icon_description--2 {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    gap: 10px;
-    position: relative;
-    right: 2.5em;
-    font-size: 1em;
-    cursor: pointer;
-  }
-  .icon_description--2 .fas {
-    position: relative;
-    top: 2px;
-    font-size: 0.9em;
-  }
-  .icon_description--2 #partnership {
-    color: white;
-    position: relative;
-    right: .3em;
-  }
-  .list {
-    position: relative;
-    right: 39px;
-    font-size: 1em;
-    cursor: pointer;
-    margin-bottom: 2em;
-  }
-  .list li {
-    line-height: 30px;
-  }
-  .list .footer_link {
-    color: white;
-  }
-  /* END OF FOOTER */
-}
-
-/* END OF MEDIA QUERIES */
-/* END OF DESKTOP */
-@media screen and (min-width: 320px) and (max-width: 992px) {
-  /* HEADER */
-  .back_to_homepage {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    font-family: "Shrikhand", cursive;
-    padding-block: 0.6em;
-  }
-  .back_to_homepage .fas {
-    font-size: 1.5em;
-    position: relative;
-    right: 1.5em;
-    top: 0.3em;
-  }
-  .back_to_homepage h1 {
-    font-size: 1.5em;
-  }
-  /* END OF HEADER */
-  /* CONTAINER */
-  .container {
-    width: 100%;
-  }
-  .container .banner {
-    width: 100%;
-  }
-  .container .banner img {
-    width: 100%;
-  }
-  /* END OF CONTAINER */
-  /* FOOD_MENU ANIMATION */
-  @-webkit-keyframes FadeInFadeOut {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-  @keyframes FadeInFadeOut {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-  /* FOOD_MENU */
-  .food_menu {
-    background-color: #F6F6F6;
-    padding-inline: .8em;
-    padding-top: 2em;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    position: relative;
-    padding-bottom: 3.5em;
-  }
-  .food_menu header {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    position: relative;
-    left: .8em;
-    margin-bottom: 2em;
-    font-size: .8em;
-  }
-  .food_menu header h1 {
-    font-family: "Shrikhand", cursive;
-    font-weight: 500;
-  }
-  .food_menu header .far {
-    font-size: 1.8em;
-    position: absolute;
-    top: 0.20em;
-    right: 1.2em;
-    font-weight: 100;
-    cursor: pointer;
-  }
-  .food_menu header .far::after {
-    content: '\f004';
-    position: relative;
-    right: 1.7em;
-    font-size: .4em;
-    bottom: 25px;
-    -webkit-transition: -webkit-transform 500ms ease-in;
-    transition: -webkit-transform 500ms ease-in;
-    transition: transform 500ms ease-in;
-    transition: transform 500ms ease-in, -webkit-transform 500ms ease-in;
-    display: inline-block;
-    font-weight: bold;
-    cursor: pointer;
-    top: -6px;
-    visibility: hidden;
-    background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
-    background: linear-gradient(to top, #FF79DA, #9356DC);
-    -webkit-background-clip: text;
-    background-clip: text;
-  }
-  .heart_animation:hover > .fa-heart {
-    background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
-    background: linear-gradient(to top, #FF79DA, #9356DC);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-  .heart_animation:hover > .fa-heart::after {
-    visibility: visible;
-    -webkit-transform: scale(2.4);
-            transform: scale(2.4);
-  }
-  .check_validate {
-    position: absolute;
-    right: 0;
-    background-color: #99E2D0;
-    height: 100%;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 16px;
-    top: 0;
-    -webkit-transition-property: width,-webkit-transform;
-    transition-property: width,-webkit-transform;
-    transition-property: width,transform;
-    transition-property: width,transform,-webkit-transform;
-    -webkit-transition-duration: 700ms;
-            transition-duration: 700ms;
-    -webkit-transition-timing-function: ease-out;
-            transition-timing-function: ease-out;
-    width: 0%;
-    /* To overlap the price div perhaps it's temporary */
-    z-index: 1;
-  }
-  .check_validate .fa-check-circle {
-    font-size: 2.5em;
-    color: white;
-    -webkit-transition-duration: 700ms;
-            transition-duration: 700ms;
-    position: relative;
-    top: .5em;
-    left: .5em;
-  }
-  /* GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
-  @-webkit-keyframes rotation {
-    from {
-      -webkit-transform: rotate(-360deg);
-              transform: rotate(-360deg);
-    }
-    to {
-      -webkit-transform: rotate(0);
-              transform: rotate(0);
-    }
-  }
-  @keyframes rotation {
-    from {
-      -webkit-transform: rotate(-360deg);
-              transform: rotate(-360deg);
-    }
-    to {
-      -webkit-transform: rotate(0);
-              transform: rotate(0);
-    }
-  }
-  .item {
-    overflow: hidden;
-  }
-  .item:hover > .check_validate {
-    width: 6em;
-  }
-  .item:hover > .check_validate > .fa-check-circle {
-    -webkit-animation: rotation 700ms ease-out;
-            animation: rotation 700ms ease-out;
-  }
-  .item__price {
-    -webkit-transition: padding-right 700ms ease-out;
-    transition: padding-right 700ms ease-out;
-  }
-  .item:hover > .item__price {
-    padding-right: 6em;
-  }
-  /* END GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
-  /* STARTER */
-  .starter {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    gap: 1.5em;
-    font-family: "Roboto", sans-serif;
-    -webkit-animation: FadeInFadeOut 1.5s ease-in-out;
-            animation: FadeInFadeOut 1.5s ease-in-out;
-  }
-  .starter .starter--title {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 1.1em;
-    position: relative;
-    left: .6em;
-    margin-bottom: .8em;
-    border-bottom: 1px solid #99E2D0;
-    border-width: 0.21em;
-    padding-bottom: .3em;
-    width: 100%;
-    text-align: center;
-  }
-  .starter .starter--title::after {
-    content: '';
-    display: block;
-    border-bottom: 1px solid #99E2D0;
-    border-width: 0.21em;
-    width: 4em;
-    margin: .3em auto;
-    position: relative;
-  }
-  .starter .item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    background-color: white;
-    border-radius: 20px;
-    padding: 1em;
-    -webkit-box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.11);
-            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.11);
-    margin-bottom: 0.8em;
-    position: relative;
-    font-size: .8em;
-    width: 46%;
-  }
-  .starter .item .item--description h2 {
-    margin-bottom: .2em;
-    font-weight: 600;
-  }
-  .starter .item .item__price {
-    position: absolute;
-    right: 2em;
-    top: 3em;
-    font-weight: bold;
-  }
-  .main_course {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    gap: 1.5em;
-    font-family: "Roboto", sans-serif;
-    -webkit-animation: FadeInFadeOut 2.5s ease-in-out;
-            animation: FadeInFadeOut 2.5s ease-in-out;
-  }
-  .main_course .main_course--title {
-    font-weight: 500;
-    font-size: 1.1em;
-    position: relative;
-    left: .6em;
-    margin-bottom: .8em;
-    margin-top: .8em;
-    border-bottom: 1px solid #99E2D0;
-    border-width: 0.21em;
-    padding-bottom: .3em;
-    width: 100%;
-    text-align: center;
-  }
-  .main_course .main_course--title::after {
-    content: '';
-    display: block;
-    border-bottom: 1px solid #99E2D0;
-    border-width: 0.21em;
-    width: 2.9em;
-    margin: .3em auto;
-    position: relative;
-  }
-  .main_course .item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    background-color: white;
-    border-radius: 20px;
-    padding: 1em;
-    -webkit-box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.11);
-            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.11);
-    margin-bottom: 0.8em;
-    position: relative;
-    font-size: .8em;
-    width: 46%;
-  }
-  .main_course .item .item--description h2 {
-    margin-bottom: .2em;
-    font-weight: 600;
-  }
-  .main_course .item .item__price {
-    position: absolute;
-    right: 2em;
-    top: 3em;
-    font-weight: bold;
-  }
-  .desserts {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    gap: 1.5em;
-    font-family: "Roboto", sans-serif;
-    margin-bottom: 2em;
-    -webkit-animation: FadeInFadeOut 3.5s ease-in-out;
-            animation: FadeInFadeOut 3.5s ease-in-out;
-  }
-  .desserts .desserts--title {
-    font-weight: 500;
-    font-size: 1.2em;
-    position: relative;
-    left: .6em;
-    margin-bottom: .8em;
-    margin-top: .8em;
-    border-bottom: 1px solid #99E2D0;
-    border-width: 0.21em;
-    padding-bottom: .3em;
-    width: 100%;
-    text-align: center;
-  }
-  .desserts .item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    background-color: white;
-    border-radius: 20px;
-    padding: 1em;
-    -webkit-box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.11);
-            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.11);
-    margin-bottom: 0.8em;
-    position: relative;
-    font-size: .8em;
-    width: 46%;
   }
   .desserts .item .item--description h2 {
     margin-bottom: .2em;
