--- a/css/à_la_française.css
+++ b/css/à_la_française.css
@@ -611,6 +611,7 @@ a:visited {
     background: linear-gradient(to top, #FF79DA, #9356DC);
     -webkit-background-clip: text;
     background-clip: text;
+    background-clip: text;
   }
   .heart_animation:active > .fa-heart {
     background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
