--- a/css/le_délice_des_sens.css
+++ b/css/le_délice_des_sens.css
@@ -20,7 +20,7 @@ a:visited {
 }
 
 /* DESKTOP */
-@media screen and (max-width: 993px) {
+@media screen and (min-width: 993px) {
   /* HEADER */
   .back_to_homepage {
     display: -webkit-box;
