--- a/css/main.scss
+++ b/css/main.scss
@@ -31,7 +31,7 @@ color:black;
 }
 
 
-/* PRE-LOAD 
+/* PRE-LOAD */
 
 #pre-load{
 background:white;
@@ -103,7 +103,7 @@ visibility:hidden;
 }
 
 
-END OF PRE-LOAD */
+/* END OF PRE-LOAD */
 
 /* DESKTOP */ 
 @media screen and (min-width: 993px) {
