--- a/css/main.css
+++ b/css/main.css
@@ -15,79 +15,88 @@ a:visited {
   color: black;
 }
 
-/* PRE-LOAD 
-
-#pre-load{
-background:white;
-z-index:9999;
-height:100vh;
-width:100%;
-animation: dissapear 3s ease-in-out;
-visibility:hidden;
-position:absolute;
-display:flex;
-align-items: center;
-flex-direction: column;
-
+/* PRE-LOAD */
+#pre-load {
+  background: white;
+  z-index: 9999;
+  height: 100vh;
+  width: 100%;
+  -webkit-animation: dissapear 3s ease-in-out;
+          animation: dissapear 3s ease-in-out;
+  visibility: hidden;
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
+@-webkit-keyframes dissapear {
+  from {
+    visibility: visible;
+    height: 100vh;
+  }
+  to {
+    height: 0;
+  }
+}
 
 @keyframes dissapear {
-
-from{
-visibility:visible;
-height: 100vh;
-//opacity:1;
-}
-to {
-//opacity:0;
-height:0;
-}
+  from {
+    visibility: visible;
+    height: 100vh;
+  }
+  to {
+    height: 0;
+  }
 }
 
-
-#pre-load img{
-
-position:relative;
-margin:0 auto;
-top:15em;
-left:0em;
-visibility:hidden;
-animation : loading 1.6s ease-in-out; 
-object-fit:cover;
-width:10em;
-height:10em;
-border-radius:50%;
-box-shadow: 10px 5px 10px rgba(0,0,0,0.5),
-5px 8px 8px rgba(0,0,0,0.5),
-5px 8px 8px rgba(0,0,0,0.5),
-5px 8px 8px rgba(0,0,0,0.5),
-5px 8px 8px rgba(0,0,0,0.5),
-5px 8px 8px rgba(0,0,0,0.5),
-5px 8px 8px rgba(0,0,0,0.5),
-5px 8px 8px rgba(0,0,0,0.5),
-5px 8px 8px rgba(0,0,0,0.5),
-5px 8px 8px rgba(0,0,0,0.5),
-5px 8px 8px rgba(0,0,0,0.5),;
+#pre-load img {
+  position: relative;
+  margin: 0 auto;
+  top: 15em;
+  left: 0em;
+  visibility: hidden;
+  -webkit-animation: loading 1.6s ease-in-out;
+          animation: loading 1.6s ease-in-out;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 10em;
+  height: 10em;
+  border-radius: 50%;
+  -webkit-box-shadow: 10px 5px 10px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5);
+          box-shadow: 10px 5px 10px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5);
 }
 
+@-webkit-keyframes loading {
+  from {
+    visibility: visible;
+    -webkit-transform: rotate(1turn);
+            transform: rotate(1turn);
+  }
+  to {
+    visibility: hidden;
+  }
+}
 
 @keyframes loading {
-from {
-visibility:visible;
-transform:rotate(1turn);
-
+  from {
+    visibility: visible;
+    -webkit-transform: rotate(1turn);
+            transform: rotate(1turn);
+  }
+  to {
+    visibility: hidden;
+  }
 }
 
-to {
-
-visibility:hidden;
-
-}
-}
-
-
-END OF PRE-LOAD */
+/* END OF PRE-LOAD */
 /* DESKTOP */
 @media screen and (min-width: 993px) {
   /* HEADER */
