--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@ a:visited {
           flex-direction: column;
 }
 
+/* PRE-LOAD ANIMATION */
 @-webkit-keyframes dissapear {
   from {
     visibility: visible;
@@ -46,7 +47,6 @@ a:visited {
     height: 0;
   }
 }
-
 @keyframes dissapear {
   from {
     visibility: visible;
@@ -74,6 +74,7 @@ a:visited {
           box-shadow: 10px 5px 10px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5), 5px 8px 8px rgba(0, 0, 0, 0.5);
 }
 
+/* PRE-LOAD ANIMATION */
 @-webkit-keyframes loading {
   from {
     visibility: visible;
@@ -84,7 +85,6 @@ a:visited {
     visibility: hidden;
   }
 }
-
 @keyframes loading {
   from {
     visibility: visible;
@@ -214,12 +214,10 @@ a:visited {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     gap: 3em;
-    /*align-items: center;*/
     position: relative;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    /*right:70px;*/
     padding-left: 23px;
     padding-right: 15px;
   }
@@ -596,9 +594,7 @@ a:visited {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    /*align-items: center;*/
     position: relative;
-    /*right:70px;*/
     padding-left: 23px;
     padding-right: 15px;
   }
