--- a/css/la_palette_du_goût.scss
+++ b/css/la_palette_du_goût.scss
@@ -116,6 +116,7 @@ $simulate_link_presence:pointer;
         flex-direction: column;
         position: relative;
         padding-bottom:3.5em;
+        margin-top:-2em;
 
             & header
             {
