--- a/css/la_note_enchantée.css
+++ b/css/la_note_enchantée.css
@@ -51,7 +51,7 @@ a:visited {
   }
   .container .banner img {
     width: 100%;
-    height: 41em;
+    height: 55em;
     -o-object-fit: cover;
        object-fit: cover;
   }
@@ -87,6 +87,7 @@ a:visited {
             flex-direction: column;
     position: relative;
     padding-bottom: 3.5em;
+    margin-top: -2em;
   }
   .food_menu header {
     display: -webkit-box;
@@ -406,7 +407,7 @@ a:visited {
     color: white;
   }
   .button:hover {
-    opacity: 0.7;
+    opacity: 0.9;
     -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
             box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
   }
