--- a/css/le_délice_des_sens.css
+++ b/css/le_délice_des_sens.css
@@ -84,6 +84,7 @@ a:visited {
             flex-direction: column;
     position: relative;
     padding-bottom: 3.5em;
+    margin-top: -2em;
   }
   .food_menu header {
     display: -webkit-box;
