--- a/css/à_la_française.css
+++ b/css/à_la_française.css
@@ -402,7 +402,7 @@ a:visited {
     color: white;
   }
   .button:hover {
-    opacity: 0.7;
+    opacity: 0.9;
     -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
             box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
   }
@@ -567,6 +567,7 @@ a:visited {
             flex-direction: column;
     position: relative;
     padding-bottom: 3.5em;
+    margin-top: -2em;
   }
   .food_menu header {
     display: -webkit-box;
