--- a/css/à_la_française.scss
+++ b/css/à_la_française.scss
@@ -669,6 +669,7 @@ a:visited
         flex-direction: column;
         position: relative;
         padding-bottom:3.5em;
+        margin-top:-2em;
         
             & header
             {
