--- a/css/main.scss
+++ b/css/main.scss
@@ -759,11 +759,11 @@ color:black;
             color:gray;
         }
 
-        &:last-child:active
+        &:active
         {
             background-color:#F5EDFF;
 
-        & .fa-store
+        & .fas
         {
          color:#9356DC;
         }
