--- a/css/la_note_enchantée.scss
+++ b/css/la_note_enchantée.scss
@@ -39,6 +39,15 @@ $simulate_link_presence:pointer;
     color:#353535;
     }
 
+    #back_to_homepage--2:visited
+    {
+        color:black;
+    }
+    
+    #back_to_homepage--2:visited
+    {
+        color:black;
+    }
 
 /* DESKTOP */
 @media screen and (min-width:993px) 
@@ -590,7 +599,7 @@ $simulate_link_presence:pointer;
 
 
 
-@media screen and (min-width: 320px) and (max-width:992px)
+@media screen and (min-width: 0px) and (max-width:992px)
 {
     
 
