--- a/css/la_palette_du_goût.css
+++ b/css/la_palette_du_goût.css
@@ -19,6 +19,14 @@ a:visited {
   color: #353535;
 }
 
+#back_to_homepage--2:visited {
+  color: black;
+}
+
+#back_to_homepage--2:visited {
+  color: black;
+}
+
 /* DESKTOP */
 @media screen and (min-width: 993px) {
   /* HEADER */
@@ -498,7 +506,7 @@ a:visited {
 
 /* END OF MEDIA QUERIES */
 /* END OF DESKTOP */
-@media screen and (min-width: 320px) and (max-width: 992px) {
+@media screen and (min-width: 0px) and (max-width: 992px) {
   /* HEADER */
   .back_to_homepage {
     display: -webkit-box;
@@ -921,6 +929,12 @@ a:visited {
   .food_menu header .far {
     position: absolute;
     right: 0.1em;
+  }
+  .main_course > .item:active:nth-child(2) > .item--description > p {
+    width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
   .main_course > .item:active:nth-child(3) > .item--description > h2 {
     width: 100px;
