--- a/css/le_délice_des_sens.css
+++ b/css/le_délice_des_sens.css
@@ -19,6 +19,14 @@ a:visited {
   color: #353535;
 }
 
+#back_to_homepage--2:visited {
+  color: black;
+}
+
+#back_to_homepage--2:visited {
+  color: black;
+}
+
 /* DESKTOP */
 @media screen and (min-width: 993px) {
   /* HEADER */
@@ -502,7 +510,7 @@ a:visited {
 /* END OF MEDIA QUERIES */
 /* END OF DESKTOP */
 /* MOBILE AND TABLET */
-@media screen and (min-width: 320px) and (max-width: 992px) {
+@media screen and (min-width: 0px) and (max-width: 992px) {
   /* HEADER */
   .back_to_homepage {
     display: -webkit-box;
