--- a/css/le_délice_des_sens.scss
+++ b/css/le_délice_des_sens.scss
@@ -39,6 +39,15 @@ a:visited
    color:#353535;
 }
 
+#back_to_homepage--2:visited
+{
+    color:black;
+}
+
+#back_to_homepage--2:visited
+{
+    color:black;
+}
 
 /* DESKTOP */
 @media screen and (min-width:993px)
@@ -582,7 +591,7 @@ a:visited
 
 
 /* MOBILE AND TABLET */
-@media screen and (min-width: 320px) and (max-width:992px)
+@media screen and (min-width: 0px) and (max-width:992px)
 {
     
 
