--- a/css/à_la_française.css
+++ b/css/à_la_française.css
@@ -19,6 +19,14 @@ a:visited {
   color: #353535;
 }
 
+#back_to_homepage--2:visited {
+  color: black;
+}
+
+#back_to_homepage--2:visited {
+  color: black;
+}
+
 /* DESKTOP */
 @media screen and (min-width: 993px) {
   /* HEADER */
@@ -500,7 +508,7 @@ a:visited {
 
 /* END OF MEDIA QUERIES */
 /* END DESKTOP */
-@media screen and (min-width: 320px) and (max-width: 992px) {
+@media screen and (min-width: 0px) and (max-width: 992px) {
   /* HEADER */
   .back_to_homepage {
     display: -webkit-box;
