--- a/css/le_délice_des_sens.scss
+++ b/css/le_délice_des_sens.scss
@@ -67,7 +67,7 @@ a:visited
              {
                  font-size:1.5em;
                  position: relative;
-                 right:1.5em;
+                 right:2.5em;
                  top:0.3em;
              }
  
@@ -465,6 +465,7 @@ a:visited
         box-shadow: -1px 1px 7px rgba(0,0,0,0.5);
         width: 10em;
         margin:0 auto;
+        font-family: 'Roboto',sans-serif;
 
                 & a
                 {
@@ -608,7 +609,7 @@ a:visited
             {
                 font-size:1.5em;
                 position: relative;
-                right:1.5em;
+                right:2.5em;
                 top:0.3em;
             }
 
@@ -965,7 +966,7 @@ a:visited
                 box-shadow: -1px 1px 7px rgba(0,0,0,0.5);
                 width: 10em;
                 margin:0 auto;
-
+                font-family: 'Roboto',sans-serif;
 
                     & a
                     {
