--- a/css/la_note_enchantée.css
+++ b/css/la_note_enchantée.css
@@ -43,7 +43,7 @@ a:visited {
   .back_to_homepage .fas {
     font-size: 1.5em;
     position: relative;
-    right: 1.5em;
+    right: 2.5em;
     top: 0.3em;
   }
   .back_to_homepage h1 {
@@ -410,6 +410,7 @@ a:visited {
             box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
     width: 10em;
     margin: 0 auto;
+    font-family: 'Roboto',sans-serif;
   }
   .button a {
     color: white;
@@ -527,7 +528,7 @@ a:visited {
   .back_to_homepage .fas {
     font-size: 1.5em;
     position: relative;
-    right: 1.5em;
+    right: 2.5em;
     top: 0.3em;
   }
   .back_to_homepage h1 {
@@ -839,6 +840,7 @@ a:visited {
             box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
     width: 10em;
     margin: 0 auto;
+    font-family: 'Roboto',sans-serif;
   }
   .button a {
     color: white;
@@ -938,6 +940,12 @@ a:visited {
   .food_menu header .far {
     position: absolute;
     right: 0.1em;
+  }
+  .starter > .item:active:nth-child(2) > .item--description > p {
+    width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
   .starter > .item:active:nth-child(4) > .item--description > h2 {
     width: 100px;
