--- a/css/la_note_enchantée.scss
+++ b/css/la_note_enchantée.scss
@@ -68,7 +68,7 @@ $simulate_link_presence:pointer;
              {
                  font-size:1.5em;
                  position: relative;
-                 right:1.5em;
+                 right:2.5em;
                  top:0.3em;
              }
  
@@ -468,6 +468,7 @@ $simulate_link_presence:pointer;
         box-shadow: -1px 1px 7px rgba(0,0,0,0.5);
         width: 10em;
         margin:0 auto;
+        font-family: 'Roboto',sans-serif;
 
                 & a
                 {
@@ -616,7 +617,7 @@ $simulate_link_presence:pointer;
             {
                 font-size:1.5em;
                 position: relative;
-                right:1.5em;
+                right:2.5em;
                 top:0.3em;
             }
 
@@ -978,6 +979,7 @@ $simulate_link_presence:pointer;
         box-shadow: -1px 1px 7px rgba(0,0,0,0.5);
         width: 10em;
         margin:0 auto;
+        font-family: 'Roboto',sans-serif;
 
                 & a
                 {
@@ -1110,6 +1112,14 @@ $simulate_link_presence:pointer;
     {
         position: absolute;
         right:0.1em;
+    }
+
+    .starter > .item:active:nth-child(2) > .item--description > p
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
     }
 
     .starter > .item:active:nth-child(4) > .item--description > h2
