--- a/css/la_palette_du_goût.css
+++ b/css/la_palette_du_goût.css
@@ -43,7 +43,7 @@ a:visited {
   .back_to_homepage .fas {
     font-size: 1.5em;
     position: relative;
-    right: 1.5em;
+    right: 2.5em;
     top: 0.3em;
   }
   .back_to_homepage h1 {
@@ -404,6 +404,7 @@ a:visited {
             box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
     width: 10em;
     margin: 0 auto;
+    font-family: 'Roboto';
   }
   .button a {
     color: white;
@@ -521,7 +522,7 @@ a:visited {
   .back_to_homepage .fas {
     font-size: 1.5em;
     position: relative;
-    right: 1.5em;
+    right: 2.5em;
     top: 0.3em;
   }
   .back_to_homepage h1 {
@@ -830,6 +831,7 @@ a:visited {
             box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
     width: 10em;
     margin: 0 auto;
+    font-family: 'Roboto';
   }
   .button a {
     color: white;
@@ -930,6 +932,18 @@ a:visited {
     position: absolute;
     right: 0.1em;
   }
+  .starter > .item:active:nth-child(3) > .item--description > h2 {
+    width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  .main_course > .item:active:nth-child(2) > .item--description > h2 {
+    width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
   .main_course > .item:active:nth-child(2) > .item--description > p {
     width: 100px;
     overflow: hidden;
@@ -942,7 +956,25 @@ a:visited {
     text-overflow: ellipsis;
     white-space: nowrap;
   }
+  .main_course > .item:active:nth-child(3) > .item--description > p {
+    width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
   .desserts > .item:active:nth-child(3) > .item--description > h2 {
+    width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  .desserts > .item:active:nth-child(3) > .item--description > p {
+    width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  .desserts > .item:active:nth-child(4) > .item--description > p {
     width: 100px;
     overflow: hidden;
     text-overflow: ellipsis;
