--- a/css/la_palette_du_goût.scss
+++ b/css/la_palette_du_goût.scss
@@ -66,7 +66,7 @@ $simulate_link_presence:pointer;
         {
             font-size:1.5em;
             position: relative;
-            right:1.5em;
+            right:2.5em;
             top:0.3em;
         }
 
@@ -468,6 +468,7 @@ $simulate_link_presence:pointer;
         box-shadow: -1px 1px 7px rgba(0,0,0,0.5);
         width: 10em;
         margin:0 auto;
+        font-family: 'Roboto';
 
 
             & a
@@ -615,7 +616,7 @@ $simulate_link_presence:pointer;
             {
                 font-size:1.5em;
                 position: relative;
-                right:1.5em;
+                right:2.5em;
                 top:0.3em;
             }
 
@@ -969,6 +970,7 @@ $simulate_link_presence:pointer;
                 box-shadow: -1px 1px 7px rgba(0,0,0,0.5);
                 width: 10em;
                 margin:0 auto;
+                font-family: 'Roboto';
 
 
                     & a
@@ -1106,6 +1108,24 @@ $simulate_link_presence:pointer;
 
 
 
+    .starter > .item:active:nth-child(3) > .item--description > h2
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
+
+
+    .main_course > .item:active:nth-child(2) > .item--description > h2
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
     .main_course > .item:active:nth-child(2) > .item--description > p
     {
         width: 100px;
@@ -1122,8 +1142,32 @@ $simulate_link_presence:pointer;
         text-overflow: ellipsis;
         white-space: nowrap;
     }
+
+    .main_course > .item:active:nth-child(3) > .item--description > p
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
    
     .desserts > .item:active:nth-child(3) > .item--description > h2
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
+    .desserts > .item:active:nth-child(3) > .item--description > p
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
+    .desserts > .item:active:nth-child(4) > .item--description > p
     {
         width: 100px;
         overflow: hidden;
