--- a/css/à_la_française.css
+++ b/css/à_la_française.css
@@ -43,7 +43,7 @@ a:visited {
   .back_to_homepage .fas {
     font-size: 1.5em;
     position: relative;
-    right: 1.5em;
+    right: 2.5em;
     top: 0.3em;
   }
   .back_to_homepage h1 {
@@ -406,6 +406,7 @@ a:visited {
             box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
     width: 10em;
     margin: 0 auto;
+    font-family: 'Roboto',sans-serif;
   }
   .button a {
     color: white;
@@ -523,7 +524,7 @@ a:visited {
   .back_to_homepage .fas {
     font-size: 1.5em;
     position: relative;
-    right: 1.5em;
+    right: 2.5em;
     top: 0.3em;
   }
   .back_to_homepage h1 {
@@ -833,6 +834,7 @@ a:visited {
             box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
     width: 10em;
     margin: 0 auto;
+    font-family: 'Roboto',sans-serif;
   }
   .button a {
     color: white;
@@ -933,7 +935,19 @@ a:visited {
     position: absolute;
     right: 0.1em;
   }
+  .starter > .item:active:nth-child(3) > .item--description > h2 {
+    width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
   .main_course > .item:active:nth-child(4) > .item--description > h2 {
+    width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  .desserts > .item:active:nth-child(2) > .item--description > h2 {
     width: 100px;
     overflow: hidden;
     text-overflow: ellipsis;
