--- a/css/à_la_française.scss
+++ b/css/à_la_française.scss
@@ -68,7 +68,7 @@ a:visited
              {
                  font-size:1.5em;
                  position: relative;
-                 right:1.5em;
+                 right:2.5em;
                  top:0.3em;
              }
  
@@ -472,6 +472,7 @@ a:visited
         box-shadow: -1px 1px 7px rgba(0,0,0,0.5);
         width: 10em;
         margin:0 auto;
+        font-family: 'Roboto',sans-serif;
 
             & a
             {
@@ -618,7 +619,7 @@ a:visited
             {
                 font-size:1.5em;
                 position: relative;
-                right:1.5em;
+                right:2.5em;
                 top:0.3em;
             }
 
@@ -974,6 +975,7 @@ a:visited
         box-shadow: -1px 1px 7px rgba(0,0,0,0.5);
         width: 10em;
         margin:0 auto;
+        font-family: 'Roboto',sans-serif;
 
                 & a
                 {
@@ -1109,8 +1111,24 @@ a:visited
         right:0.1em;
     }
 
+    .starter > .item:active:nth-child(3) > .item--description > h2
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
 
     .main_course > .item:active:nth-child(4) > .item--description > h2
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
+    .desserts > .item:active:nth-child(2) > .item--description > h2
     {
         width: 100px;
         overflow: hidden;
