--- a/css/la_palette_du_goût.scss
+++ b/css/la_palette_du_goût.scss
@@ -65,9 +65,9 @@ $simulate_link_presence:pointer;
         & .fas 
         {
             font-size:1.5em;
-            position: relative;
-            right:2.5em;
-            top:0.3em;
+            position: absolute;
+            top:17px;
+            left:22px;
         }
 
         & h1
@@ -615,9 +615,9 @@ $simulate_link_presence:pointer;
             & .fas 
             {
                 font-size:1.5em;
-                position: relative;
-                right:2.5em;
-                top:0.3em;
+                position: absolute;
+                top:0.7em;
+                left:22px;
             }
 
             & h1
