--- a/css/à_la_française.scss
+++ b/css/à_la_française.scss
@@ -67,9 +67,9 @@ a:visited
              & .fas 
              {
                  font-size:1.5em;
-                 position: relative;
-                 right:2.5em;
-                 top:0.3em;
+                 position: absolute;
+                 top:17px;
+                 left:22px;
              }
  
              & h1
@@ -618,9 +618,9 @@ a:visited
             & .fas 
             {
                 font-size:1.5em;
-                position: relative;
-                right:2.5em;
-                top:0.3em;
+                position:absolute;
+                top:0.7em;
+                left:22px;
             }
 
             & h1
