Removing internet explorer prefix of the main.css file and readjusting truncate effect  on all menus

--- a/css/le_délice_des_sens.css
+++ b/css/le_délice_des_sens.css
@@ -944,5 +944,11 @@ a:visited {
     text-overflow: ellipsis;
     white-space: nowrap;
   }
+  .starter > .item:active:nth-child(3) > .item--description > p {
+    width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
 /*# sourceMappingURL=le_délice_des_sens.css.map */
