--- a/css/à_la_française.scss
+++ b/css/à_la_française.scss
@@ -1111,6 +1111,15 @@ a:visited
         right:0.1em;
     }
 
+
+    .starter > .item:active:nth-child(2) > .item--description > h2
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
     .starter > .item:active:nth-child(3) > .item--description > h2
     {
         width: 100px;
@@ -1120,7 +1129,49 @@ a:visited
     }
 
 
+    .main_course > .item:active:nth-child(2) > .item--description > h2
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
+    .main_course > .item:active:nth-child(2) > .item--description > p
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
+    .main_course > .item:active:nth-child(3) > .item--description > h2
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
+    .main_course > .item:active:nth-child(3) > .item--description > p
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
+
+
     .main_course > .item:active:nth-child(4) > .item--description > h2
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
+    .main_course > .item:active:nth-child(4) > .item--description > p
     {
         width: 100px;
         overflow: hidden;
