--- a/css/la_note_enchantée.css
+++ b/css/la_note_enchantée.css
@@ -965,6 +965,12 @@ a:visited {
     text-overflow: ellipsis;
     white-space: nowrap;
   }
+  .main_course > .item:active:nth-child(4) > .item--description > h2 {
+    width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
   .desserts > .item:active:nth-child(2) > .item--description > p {
     width: 150px;
     overflow: hidden;
