--- a/css/la_note_enchantée.scss
+++ b/css/la_note_enchantée.scss
@@ -1146,6 +1146,13 @@ $simulate_link_presence:pointer;
         white-space: nowrap;
     }
 
+    .main_course > .item:active:nth-child(4) > .item--description > h2
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
 
     .desserts > .item:active:nth-child(2) > .item--description > p
     {
