--- a/css/le_délice_des_sens.scss
+++ b/css/le_délice_des_sens.scss
@@ -1111,4 +1111,12 @@ a:visited
           text-overflow: ellipsis;
           white-space: nowrap;
     }
+
+    .starter > .item:active:nth-child(3) > .item--description > p
+    {
+          width: 100px;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+    }
 }
