--- a/css/la_palette_du_goût.css
+++ b/css/la_palette_du_goût.css
@@ -938,6 +938,12 @@ a:visited {
     text-overflow: ellipsis;
     white-space: nowrap;
   }
+  .starter > .item:active:nth-child(4) > .item--description > p {
+    width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
   .main_course > .item:active:nth-child(2) > .item--description > h2 {
     width: 100px;
     overflow: hidden;
