--- a/css/la_palette_du_goût.scss
+++ b/css/la_palette_du_goût.scss
@@ -1116,6 +1116,14 @@ $simulate_link_presence:pointer;
         white-space: nowrap;
     }
 
+    .starter > .item:active:nth-child(4) > .item--description > p
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
 
 
     .main_course > .item:active:nth-child(2) > .item--description > h2
