Links color have been change for the functionning section

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,9 @@
   text-decoration: none;
   list-style-type: none;
 }
-
+.functioning .item{
+  color:black !important;
+}
 a:visited {
   color: black;
 }
